# glooey

./: .bumpversion.cfg  .env  .gitignore  .readthedocs.yml  .travis.yml  .unenv  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.rst  TODO.txt  pyproject.toml  setup.py
.github/workflows/: test_and_release.yml
docs/: .gitignore  Makefile  api.rst  api.txt  api_reference.txt  composing_widgets.rst  composing_widgets.txt  conf.py  especially_useful_widgets.rst  especially_useful_widgets.txt  getting_started.py  getting_started.rst  getting_started.txt  glooey.py  glooey_ext.py  how_it_all_works.rst  how_it_all_works.txt  index.rst  index.txt  installation.txt  make.bat  making_widgets_from_scratch.rst  making_widgets_from_scratch.txt  more_useful_widgets.rst  more_useful_widgets.txt  mouse_and_keyboard_input.rst  mouse_and_keyboard_input.txt  padding_alignment_size_hints.rst  padding_alignment_size_hints.txt  regenerate_autodocs.sh  screenshot.sh  stylizing_widgets.rst  stylizing_widgets.txt  troubleshooting.rst  troubleshooting.txt  under_the_hood.txt  writing_widgets.rst  zip_demos.py
docs/api/: glooey.buttons.Button.txt  glooey.buttons.Checkbox.txt  glooey.buttons.Dropdown.txt  glooey.buttons.RadioButton.txt  glooey.buttons.Rollover.txt  glooey.buttons.txt  glooey.containers.Bin.txt  glooey.containers.Board.txt  glooey.containers.Deck.txt  glooey.containers.Frame.txt  glooey.containers.Grid.txt  glooey.containers.HBox.txt  glooey.containers.HVBox.txt  glooey.containers.Stack.txt  glooey.containers.VBox.txt  glooey.containers.align_widget_in_box.txt  glooey.containers.claim_stacked_widgets.txt  glooey.containers.txt  glooey.dialogs.ButtonDialog.txt  glooey.dialogs.Dialog.txt  glooey.dialogs.OkDialog.txt  glooey.dialogs.YesNoDialog.txt  glooey.dialogs.txt  glooey.drawing.txt  glooey.helpers.UsageError.txt  (+41 more)
glooey/: __init__.py  buttons.py  containers.py  dialogs.py  drawing.py  helpers.py  images.py  misc.py  miscellaneous.py  root.py  scrolling.py  text.py  widget.py
tests/: README.rst  TESTS.txt  button-widget.py  conftest.py  demo_helpers.py  draw-circle.py  draw-frame.py  draw-image.py  draw-line.py  draw-rectangle.py  draw-tiled-image.py  frame-widget.py  glooey  grid-widget.py  hbox-widget.py  label-widget.py  place-holder-widget.py  pytest.ini  run_all_demos.sh  run_demos.py  sandbox.py  vbox-widget.py  viewport-widget.py
why/: auto_updating_setters.md  del_semantics.md  doc_structure.txt  global_resource_cache.md  modular_buttons.md  padding.md  repacking.md  widget_rects.md
(+197 files in other folders)
